objects/Custom_Validation_Setup__c.object
<CustomObject>
    <description>Custom Object to allow PKI Admin to add Object Fields for validations based on the User/Profile chosen.</description>
    <label>Custom Validation Setup</label>
    <nameField>
        <displayFormat>CV-{0000}</displayFormat>
        <label>Account Validation #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Validations Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>User_Profile__c</fullName>
        <inlineHelpText>Does the custom object setting apply to a group of Users or Profile?</inlineHelpText>
        <label>User/Profile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Profile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <inlineHelpText>API Name of the object for which the validation must apply</inlineHelpText>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mandatory_Fields__c</fullName>
        <inlineHelpText>The list of Fields that are Mandatory for the User/Profile Chosen</inlineHelpText>
        <label>Mandatory Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Non_Changeable_Fields__c</fullName>
        <inlineHelpText>The list of Fields that are not editable for the User/Profile Chosen</inlineHelpText>
        <label>Non Changeable Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Username_Profile_name__c</fullName>
        <inlineHelpText>The Username or the Profile name for which the custom setting will be applicable</inlineHelpText>
        <label>Username/Profile name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>